--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,17 @@
 {
-  "editor.formatOnSave": true,
-  "latex-workshop.latex.external.build.command": "make"
+  "latex-workshop.latex.tools": [
+    {
+      "name": "latexmk",
+      "command": "latexmk",
+      "args": [
+        "-synctex=1",
+        "-xelatex",
+        "-interaction=nonstopmode",
+        "-file-line-error",
+        "-outdir=output",
+        "%DOC%"
+      ],
+      "env": {}
+    }
+  ]
 }
